# VirtualWebAuthn

./: .gitignore  AESCredentialWrapper.py  AttestationObject.py  AuthenticatorCryptoProvider.py  AuthenticatorVersion.py  CTAPHID.py  CTAPHIDConstants.py  CTAPHIDExceptions.py  CTAPHIDKeepAlive.py  CTAPHIDMsg.py  CTAPHIDTransaction.py  CredentialWrapper.py  DICEAuthenticator.py  DICEAuthenticatorStorage.py  DICEAuthenticatorUI.py  DICEKey.py  ES256CryptoProvider.py  HIDPacket.py  Installing_IBM_software.md  JSONAuthenticatorStorage.py  LICENCE.TXT  Makefile  MyAuthenticator.py  Notification.py  PublicKeyCredentialSource.py  README.md  SETUP.md  TPMES256CryptoProvider.py  USBHID.py  ibmtpm1119.tar  my_authenticator.json  my_authenticator_old.json  notes.md  test.py  usbraw.py
Create_USB_Gadget/: Makefile
Tpm_src/: makefile
Tpm_src/Ibmtss/: makefile-ibm  makefile-lib
Tpm_src/Ibmtss/Common/: Create_ecdsa_key.cpp  Create_primary_rsa_ek.cpp  Create_primary_rsa_key.cpp  Ecdsa_sign.cpp  Flush_context.cpp  Load_key.cpp  Make_key_persistent.cpp  (+7 more)
Tpm_src/Utilities/: makefile-utils
cpp/: compile.sh  libwatpm.py  mytest.cpp  test.py
docs/html/: .buildinfo  authenticator.html  crypto.html  crypto.tpm.html  ctap.html  dice_key.html  genindex.html  hid.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: build.sh  conf.py  ctap.rst  modules.rst
examples/: KeyManager.py  README.md
examples/fido2/: ctap2.py
fido2/: cbor.py
src/: DICEKey.py  dice_key.py  prefs.json
src/authenticator/: cbor.py  core.py  datatypes.py  diceauthenticator.py  json_storage.py  preferences.py  storage.py  ui.py
src/crypto/: aes_credential_wrapper.py  algs.py  credential_wrapper.py  crypto_provider.py  es256_crypto_provider.py  tpm_es256_crypto_provider.py
src/ctap/: attestation.py  constants.py  credential_source.py  exceptions.py  keep_alive.py  messages.py  transaction.py
src/hid/: ctap.py  listeners.py  packets.py  usb.py
tpm/: Installing_IBM_software.md  README.md  makefile
tpm/docs/: Documentation.html
tpm/src/: CMakeLists.txt
tpm/src/Cmake/: CompilerWarnings.cmake  Doxygen.cmake  StandardProjectSettings.cmake  StaticAnalysers.cmake
tpm/src/Ibmtss/: CMakeLists.txt  makefile-ibm  makefile-lib
tpm/src/Ibmtss/Common/: CMakeLists.txt  Create_ecdsa_key.cpp  Create_primary_rsa_key.cpp  Create_storage_key.cpp  Ecdsa_sign.cpp  Flush_context.cpp  Load_key.cpp  Make_key_persistent.cpp  Marshal_data.cpp  Tpm_error.cpp  Tpm_initialisation.cpp  Tpm_utils.cpp  Tss_setup.cpp  Web_authn_access_tpm.cpp  Web_authn_tpm.cpp  makefile
tpm/src/Ibmtss/Include/: Create_ecdsa_key.h  Create_primary_rsa_key.h  Create_storage_key.h  Ecdsa_sign.h  Flush_context.h  Ibmtss_helpers.h  Load_key.h  Make_key_persistent.h  Marshal_data.h  Tpm_error.h  Tpm_initialisation.h  Tpm_utils.h  Tss_param.h  Tss_setup.h  Web_authn_access_tpm.h  Web_authn_structures.h  Web_authn_tpm.h
tpm/src/Ibmtss/Lib/: libwatpm.py  test2.py
tpm/src/Ibmtss/Test/: CMakeLists.txt  makefile
tpm/src/Ibmtss/Test/Test_wa_tpm/: CMakeLists.txt  README.txt  Test_wa_tpm.cpp  makefile
tpm/src/Ibmtss/Test/Test_wa_tpm_2/: CMakeLists.txt  Test_wa_tpm_2.cpp  makefile
tpm/src/Tss_utilities/: CMakeLists.txt
tpm/src/Tss_utilities/Include/: Tpm_param.h  Tpm_timer.h  Tss_includes.h  Tss_key_helpers.h
tpm/src/Utilities/: CMakeLists.txt
tpm/src/Utilities/Common/: Byte_array.cpp  Byte_buffer.cpp  CMakeLists.txt  Clock_utils.cpp  Hex_string.cpp  Hmac.cpp  Io_utils.cpp  Logging.cpp  Number_conversions.cpp  Openssl_bn_utils.cpp  Openssl_bnp256.cpp  Openssl_ec_utils.cpp  Openssl_utils.cpp  Sha256.cpp
tpm/src/Utilities/Include/: Byte_array.h  Byte_buffer.h  Clock_utils.h  G1_utils.h  Get_random_bytes.h  Hex_string.h  Hmac.h  Io_utils.h  Logging.h  Number_conversions.h  Openssl_aes.h  Openssl_bn_utils.h  Openssl_bnp256.h  Openssl_ec_utils.h  Openssl_utils.h  Sha.h  Tpm_defs.h  bnp256_param.h
tpm/src/Utilities/Test/: makefile
tpm/src/Utilities/Test/Test_clock_utils/: Test_clock_utils.cpp  makefile  test_clock_utils
udev_rules/: 70-solokeys-access.rules  set_udev_rules.sh
(+473 files in other folders)
